--- a/addons/themes/mariners/views/layouts/default.html
+++ b/addons/themes/mariners/views/layouts/default.html
@@ -1,59 +1,39 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
 
-<head profile="http://gmpg.org/xfn/11">
-	{pyro:theme:partial name="metadata"}
-</head>
-
-<body id="top">
-
-	<!-- Begin pageWrapper -->
-	<div id="pageWrapper">
-		<div id="mainPage">
-			{pyro:integration:analytics}
-			<div id="left">
-				<div id="logo">
-					<h1><a href="{pyro:url:site}" title="Home">{pyro:settings:site_name}</a></h1>
-					<h2 class="slogan">{pyro:settings:site_slogan}</h2>
+	<head profile="http://gmpg.org/xfn/11">
+		<title>{pyro:template:title}</title>
+		{pyro:theme:partial name="metadata"}
+		{pyro:theme:css file="style.css"}		
+	</head>
+	<body>
+		<div id="main-container" class="container">
+			<div id="header" class="container">
+				<div id="search">
 				</div>
-				<div id="big-logo"></div>
+				<div id="logo">LOGO</div>			
+				<div id="main-menu">
+					{pyro:navigation:links group="header"}					
+				</div>
 			</div>
-			<!-- Begin header -->
-			<div id="right">
-				<div id="header">
-					{pyro:theme:partial name="header"}
+			<div id="content" class="container">
+				<div id="model-container">
+				
 				</div>
-				<!-- Begin contentWrapper -->
-				<div id="contentWrapper">
-		
-				<!-- Begin content -->
-					{pyro:session:messages success="success-box" notice="notice-box" error="error-box"}
-					<div id="content-left">
+				<div id="main">
+					<div id="message-container">
+						{pyro:session:messages success="success-box" notice="notice-box" error="error-box"}
+					</div>
+					<div class="modules">
 						{pyro:template:body}
 					</div>
-					<div id="content-right">
-						<h2>Latest News</h2>
+					<div class="modules">
 					</div>
 				</div>
-				<!-- End content -->
-		
-					<!-- {pyro:theme:partial name="sidebar"} -->
-				
 			</div>
-		<!-- End contentWrapper -->
-			<div id="footerBox">
-				<div id="box1" class="rounded-corneer square"></div>
-				<div id="box2"></div>
-				<div id="box3" class="rounded-corneer square box-content"></div>
-				<div id="box4" class="rounded-corneer square box-content"></div>
-				<div id="box5" class="rounded-corneer square box-content"></div>
-			</div>
-		
-			{pyro:theme:partial name="footer"}
+			<div id="footer" class="container">
+			
+			</div>				
 		</div>
-	</div>
-	<!-- End pageWrapper -->
-
-</body>
-
+	</body>
 </html>
