--- a/addons/themes/mariners/views/layouts/default.html
+++ b/addons/themes/mariners/views/layouts/default.html
@@ -41,9 +41,13 @@
 					</div>
 					<div class="modules">
 						{pyro:template:body}
+						{pyro:template:partial name="test_container"}
 					</div>
 					<div class="modules">
 					</div>
+				</div>
+				<div id="links-container">
+					{pyro:theme:partial name="menu-modules"}
 				</div>
 			</div>
 			<div id="footer" class="container">
