--- a/addons/themes/mariners/views/layouts/default.html
+++ b/addons/themes/mariners/views/layouts/default.html
@@ -7,7 +7,7 @@
 		{pyro:theme:css file="style.css"}		
 	</head>
 	<body>
-		<div id="main-container" class="container">
+		<div id="main-container">
 			<div id="header" class="container">
 				<div id="search">
 				</div>
@@ -31,7 +31,7 @@
 				
 				</div>
 			</div>
-			<div id="content" class="container">
+			<div id="content">
 				<div id="model-container">
 				
 				</div>
