--- a/addons/themes/mariners/views/layouts/default.html
+++ b/addons/themes/mariners/views/layouts/default.html
@@ -51,6 +51,18 @@
 				</div>
 			</div>
 			<div id="footer" class="container">
+				<div class="text">
+					COPYRIGHT &copy; 2008 <span>MARINERS' POLYTECHNIC TRAINING CENTER</span>
+				</div>
+				<ul>
+				{pyro:navigation:links group="header"}
+					<li class="menu-item">
+						<a href="{url}" class="{class}">
+							{title}
+						</a>
+					</li>
+				{/pyro:navigation:links}
+				</ul>
 			
 			</div>				
 		</div>
