added latest news widget

--- a/addons/themes/mariners/views/partials/metadata.html
+++ b/addons/themes/mariners/views/partials/metadata.html
@@ -1,8 +1,8 @@
 <!-- Begin meta tags -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-<meta name="author" content="iKreativ.com" />
-<meta name="copyright" content="PyroCMS.com" />
+<meta name="author" content="98labs.com" />
+<meta name="copyright" content="Mariners' Polytechnic Training Center" />
 <meta name="robots" content="noindex, nofollow" />
 <meta name="distribution" content="global" />
 <meta name="resource-type" content="document" />
