--- a/addons/themes/mariners/views/layouts/default.html
+++ b/addons/themes/mariners/views/layouts/default.html
@@ -45,33 +45,7 @@
 								{pyro:template:body}
 							</div>
 							<div class="right-content modules">
-								<div class="news-container">
-									<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet facilisis tempor.</h2>
-									<p>
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet facilisis tempor. Nulla in ultrices quam. Sed molestie molestie consequat. Pellentesque ac ante id libero pulvinar venenatis vel sit amet orci. Aliquam nisl velit, fermentum eleifend mollis eget, ultricies ac felis. Vivamus arcu leo, consequat et mattis non, faucibus a arcu. Nam tempor tristique ligula, et ultricies nisl lacinia id. Morbi id congue orci. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur condimentum viverra volutpat. Etiam aliquam fermentum turpis eget faucibus. Ut a nunc eros. Integer hendrerit porttitor sem, scelerisque varius nibh faucibus at. Nullam adipiscing felis quis eros cursus ac pulvinar metus feugiat. Phasellus eu hendrerit diam. Vestibulum placerat commodo ante ac pretium. Nullam volutpat lorem elit, eget volutpat nulla. In scelerisque mauris et orci mattis faucibus.
-									</p>
-									<p>
-										Sed magna lectus, sodales eget aliquam hendrerit, auctor non nisi. Mauris gravida ultrices ligula, ut viverra metus tincidunt ut. Etiam elementum lacinia tortor et bibendum. Duis congue diam sit amet ipsum laoreet sodales. Nullam nibh metus, imperdiet id mattis a, dictum sit amet urna. Morbi eu turpis dolor. Nullam sit amet nibh nulla. Ut viverra est et ligula imperdiet sit amet posuere ante suscipit. Vestibulum sed rhoncus velit. Nulla non diam vel tortor aliquet semper. 
-									</p>
-								</div>
-								<div class="news-container">
-									<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet facilisis tempor.</h2>
-									<p>
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet facilisis tempor. Nulla in ultrices quam. Sed molestie molestie consequat. Pellentesque ac ante id libero pulvinar venenatis vel sit amet orci. Aliquam nisl velit, fermentum eleifend mollis eget, ultricies ac felis. Vivamus arcu leo, consequat et mattis non, faucibus a arcu. Nam tempor tristique ligula, et ultricies nisl lacinia id. Morbi id congue orci. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur condimentum viverra volutpat. Etiam aliquam fermentum turpis eget faucibus. Ut a nunc eros. Integer hendrerit porttitor sem, scelerisque varius nibh faucibus at. Nullam adipiscing felis quis eros cursus ac pulvinar metus feugiat. Phasellus eu hendrerit diam. Vestibulum placerat commodo ante ac pretium. Nullam volutpat lorem elit, eget volutpat nulla. In scelerisque mauris et orci mattis faucibus.
-									</p>
-									<p>
-										Sed magna lectus, sodales eget aliquam hendrerit, auctor non nisi. Mauris gravida ultrices ligula, ut viverra metus tincidunt ut. Etiam elementum lacinia tortor et bibendum. Duis congue diam sit amet ipsum laoreet sodales. Nullam nibh metus, imperdiet id mattis a, dictum sit amet urna. Morbi eu turpis dolor. Nullam sit amet nibh nulla. Ut viverra est et ligula imperdiet sit amet posuere ante suscipit. Vestibulum sed rhoncus velit. Nulla non diam vel tortor aliquet semper. 
-									</p>
-								</div>
-								<div class="news-container">
-									<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet facilisis tempor.</h2>
-									<p>
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet facilisis tempor. Nulla in ultrices quam. Sed molestie molestie consequat. Pellentesque ac ante id libero pulvinar venenatis vel sit amet orci. Aliquam nisl velit, fermentum eleifend mollis eget, ultricies ac felis. Vivamus arcu leo, consequat et mattis non, faucibus a arcu. Nam tempor tristique ligula, et ultricies nisl lacinia id. Morbi id congue orci. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur condimentum viverra volutpat. Etiam aliquam fermentum turpis eget faucibus. Ut a nunc eros. Integer hendrerit porttitor sem, scelerisque varius nibh faucibus at. Nullam adipiscing felis quis eros cursus ac pulvinar metus feugiat. Phasellus eu hendrerit diam. Vestibulum placerat commodo ante ac pretium. Nullam volutpat lorem elit, eget volutpat nulla. In scelerisque mauris et orci mattis faucibus.
-									</p>
-									<p>
-										Sed magna lectus, sodales eget aliquam hendrerit, auctor non nisi. Mauris gravida ultrices ligula, ut viverra metus tincidunt ut. Etiam elementum lacinia tortor et bibendum. Duis congue diam sit amet ipsum laoreet sodales. Nullam nibh metus, imperdiet id mattis a, dictum sit amet urna. Morbi eu turpis dolor. Nullam sit amet nibh nulla. Ut viverra est et ligula imperdiet sit amet posuere ante suscipit. Vestibulum sed rhoncus velit. Nulla non diam vel tortor aliquet semper. 
-									</p>
-								</div>
+								{pyro:widgets:area slug="latest_news"}
 							</div>
 						</div>
 					</div>
