--- a/addons/themes/mariners/views/partials/menu-modules.html
+++ b/addons/themes/mariners/views/partials/menu-modules.html
@@ -1,7 +1,9 @@
 <div class="links certificate">
-	<div class="content">
-		Verify Certificate
-	</div>
+	<a href="/mariner_certificates">
+		<span class="content">
+			Verify Certificate
+		</span>
+	</a>
 </div>
 <div class="links gallery">
 	<div class="content">
@@ -20,7 +22,9 @@
 	</div>
 </div>
 <div class="links right-links find-us">
-	<div class="content">
-		Find Us
-	</div>
+	<a href="/contact">
+		<span class="content">
+			Find Us
+		</span>
+	</a>
 </div>
