--- a/addons/themes/mariners/css/style.css
+++ b/addons/themes/mariners/css/style.css
@@ -50,6 +50,7 @@ html, body {
     left: 258px;
     position: absolute;
     top: 99px;
+    z-index: 30;
 }
 
 #main-menu .left,
@@ -185,9 +186,9 @@ html, body {
 
 .links {
     background: url("../images/links.png") no-repeat scroll 0 0 transparent;
+    cursor: pointer;
     float: left;
     height: 203px;
-    width: 203px;
 }
 
 .links a {
