change the style of the link modules

--- a/addons/themes/mariners/css/style.css
+++ b/addons/themes/mariners/css/style.css
@@ -213,11 +213,17 @@ html, body {
 }
 
 .right-links {
-	background-image: url("../images/right-links.png");
+    background-image: url("../images/right-links.png");
+    width: 203px;
+}
+
+.certificate {
+	width: 203px;
 }
 
 .certificate:hover {
 	background-image: url("../images/cert.png");
+	width: 203px;
 }
 
 #links-container .gallery {
