link added for inner page

--- a/addons/themes/mariners/views/layouts/blog.html
+++ b/addons/themes/mariners/views/layouts/blog.html
@@ -39,9 +39,11 @@
 	                </div>
                     <div id="inner-content-holder">
 		                <div class="links inner-left">
-		                    <div class="content">
-		                        Verify Certificate
-		                    </div>
+		                    <a href="/mariner_certificates">
+			                    <div class="content">
+			                        Verify Certificate
+			                    </div>
+		                    </a>
 		                </div>
 		                <div>
 	                        <div id="message-container">
