--- a/addons/themes/mariners/css/inner-style.css
+++ b/addons/themes/mariners/css/inner-style.css
@@ -26,6 +26,10 @@
     width: 203px;
 }
 
+#inner-content-holder .links:hover a {
+	margin-top: -77px;
+}
+
 #inner-content-holder .links:hover {
 
 }
