--- a/addons/themes/mariners-temp/views/partials/menu-modules.html
+++ b/addons/themes/mariners-temp/views/partials/menu-modules.html
@@ -11,17 +11,17 @@
 	</div>
 
 </div>
-<div class="links right-links announcement">
+<div class="links right-links announcement green">
 	<div class="content">
 		Announcements
 	</div>
 </div>
-<div class="links right-links course-offered">
+<div class="links right-links course-offered green">
 	<div class="content">
 		Courses Offered
 	</div>
 </div>
-<div class="links right-links find-us">
+<div class="links right-links find-us green">
 	<a href="/contact">
 		<span class="content">
 			Find Us
