--- a/addons/themes/mariners-temp/views/partials/menu-modules.html
+++ b/addons/themes/mariners-temp/views/partials/menu-modules.html
@@ -22,8 +22,8 @@
 	</div>
 </div>
 <div class="links right-links find-us green">
-	<a href="/contact">
-		<span class="content">
+	<a href="/contact" class="content>
+		<span>
 			Find Us
 		</span>
 	</a>
