--- a/addons/themes/mariners-temp/views/partials/home_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/home_page_layout.html
@@ -18,7 +18,7 @@
             
             $('.links').mouseout(function() {
                 $(this).animate({
-                    marginTop: "+10"
+                    marginTop: "0"
                 }, speed, function() {
                 });
             });
@@ -51,12 +51,14 @@
                 <div class="right"></div>
             </div>
             <div id="content">
-                <div class="left">
-                    left content
-                </div>
-                <div class="right">
-                    right content
-                </div>
+            	<div id="content-holder">
+	                <div class="left">
+	                    {pyro:template:body}
+	                </div>
+	                <div class="right">
+	                    {pyro:widgets:area slug="latest_news"}
+	                </div>
+            	</div>
             </div>
         </div>
         <div id="links-container">
